--- a/get_datasets.ipynb
+++ b/get_datasets.ipynb
@@ -179,7 +179,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -197,7 +197,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+    "hash": "bd79deaf55d5c2f6d19df0f2fceb72daaf88a8c784b56804b53b61ff3e27dc69"
    }
   }
  },
